# riesgo_corrupcion_obras

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.prod  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  tmp_data_summary.py  tmp_inspect_dataset.py
data/: README.md  datasets.json
demo/: demo_app.py  demo_riesgo.html
docs/: ENTREGABLE_SEMANA5.md  Informe_ExParcial_FGARCIA.docx  Matriz_consistencia_OEs_actualizados.docx  Matriz_consistencia_preliminar.docx  dataset.md  deployment.md  run_guide.md  ~$forme_ExParcial_FGARCIA.docx
logs/: ab_results_obra_v4.csv  holdout_proxy_tabla_cv_vs_externo.csv  metrics_experimentos.csv  sintetico_opcA_placeholder_summary.csv
notebooks/: 00_eda_inicial.ipynb  01_eda_diccionarios.ipynb  02_build_dataset.ipynb  02_build_dataset_empresa_v3_4_etiquetas.ipynb  02_build_dataset_empresa_v4_features_maestro.ipynb  02_build_dataset_funcionario_v3_4_etiquetas.ipynb  02_build_dataset_funcionario_v4_features_maestro.ipynb  02_build_dataset_obra_v3_4_etiquetas.ipynb  02_build_dataset_obra_v4.ipynb  02_build_dataset_obra_v4_features_maestro.ipynb  03_build_dataset_maestro_v2_4niveles_limpio.ipynb  03_train_obra_v4.ipynb  04_EDA_maestro.ipynb  04_generate_reports_obra_v4.ipynb  04_generate_reports_obra_v5.ipynb  05_ab_experiments_obra_v4.ipynb  05_train_baseline_maestro_4niveles.ipynb  06_shap_calibration_obra_v4.ipynb  07_var3_anticol_obra_v3.ipynb  07_var3_anticol_obra_v4.ipynb  README.md  (+5 more)
(+241 files in other folders)
