[project]
name = "riesgo-corrupcion-obras"
version = "0.1.0"
description = "Sistema de detección de riesgos de corrupción en obras públicas"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"